--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@ body {
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   -ms-overflow-style: scrollbar;
-  background: url('../img/bgs/landscape.jpg') no-repeat center top fixed;
+  background: url('../img/bgs/woman.jpg') no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -40,13 +40,6 @@ body#page-error {
   -o-background-size: cover;
   background-size: cover;
 }
-body#body {
-  background: url('../img/bgs/swimming.jpg') no-repeat center top fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 body#page-1 {
   background: url('../img/bgs/woman.jpg') no-repeat center top fixed;
   -webkit-background-size: cover;
@@ -54,6 +47,50 @@ body#page-1 {
   -o-background-size: cover;
   background-size: cover;
 }
+body#body {
+  background: url('../img/bgs/swimming.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#face {
+  background: url('../img/bgs/darkwoman.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#hands {
+  background: url('../img/bgs/front.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body#hair {
+  background: url('../img/bgs/hair.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#hygiene {
+  background: url('../img/bgs/young.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body#masks {
+  background: url('../img/bgs/hair.jpg') no-repeat center top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body#page-10 {
   background: url('../img/bgs/maneter.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -69,11 +106,15 @@ body#page-22 {
   background-size: cover;
 }
 body#page-23 {
-  background: url('../img/bgs/citrus.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/citrus_overlay.jpg')  no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  article {
+    background: $red;
+  }
   article h2.faktarutarubrik {
     color: #FFCB05;
   }
@@ -87,6 +128,9 @@ body#page-24 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  article {
+   background-color: rgba(25, 13, 13, 0.7);
+  }
 }
 body#page-25 {
   background: url('../img/bgs/greenleaf.jpg')  no-repeat center center fixed;
@@ -96,7 +140,7 @@ body#page-25 {
   background-size: cover;
 }
 body#page-26 {
-  background: url('../img/bgs/front.jpg')  no-repeat center top fixed;
+  background: url('../img/bgs/rose.jpg')  no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -227,8 +271,9 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   @media (min-width: $laptop) {
-    max-width: 70%;
+    width: 70%;
     margin: 0 auto;
+    max-width: 1253px;
   }
 
   header.site-header {
@@ -309,6 +354,9 @@ li.active a {
 li {
   color: $light-color;
   font-size: $base-font-size;
+}
+.text-capitalize {
+  text-transform: capitalize;
 }
 
 h1 {
@@ -403,7 +451,8 @@ img.img-fluid {
   background-color: #000000;
 }
 .grey {
-  background-color: rgba(38, 41, 43, 0.87);
+  background-color: rgba(36, 39, 41, 0.87);
+
 }
 .orange {
   color:  $pink;
@@ -546,7 +595,7 @@ button, .button {
   }
 
 .sloganbox#sloganboxindex {
-  min-height:60vh;
+  min-height: 60vh;
   h1.slogan {
     transform: rotate(-10deg);
     @media (max-width: $mobile) {
@@ -554,9 +603,22 @@ button, .button {
       font-size: 2rem;
     }
   }
-  @media (max-width:$tablet) {
-    min-height:20vh;
+  @media (max-width: $tablet) {
+    min-height: 20vh;
   }
+}
+  .sloganbox#sloganboxlow {
+    min-height:30vh;
+    h1.slogan {
+      transform: rotate(-10deg);
+      @media (max-width: $mobile) {
+        transform: rotate(-5deg);
+        font-size: 2rem;
+      }
+    }
+    @media (max-width:$tablet) {
+      min-height:20vh;
+    }
 }
 
 //* FLIP CARD STYLES *//
