alla sidor fixade

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@
 
   <title>Dr Hardman</title>
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- Fonts
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
 
   <link rel="icon" type="image/png" href="/img/favicon.png">
   <link rel="stylesheet" href="/css/main.css">
