--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,7 @@
 
   <title>Dr Hardman</title>
 
-  <!-- Fonts
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
+  <!-- Fonts -->
 
   <link rel="icon" type="image/png" href="/img/favicon.png">
   <link rel="stylesheet" href="/css/main.css">
@@ -32,6 +31,5 @@
   <script src="https://use.fontawesome.com/b70b2b3afb.js"></script>
   <script defer type="text/javascript" src="/js/jquery-1.12.0.min.js"></script>
   <script defer type="text/javascript" src="/js/snow.js"></script>
-  
 
 </head>
