--- a/_includes/navbar_simple.html
+++ b/_includes/navbar_simple.html
@@ -2,6 +2,6 @@
     <ul class="navi">
         <li class="nav-item"><a  href="/#page-produkter">Produkter</a></li>
         <li class="nav-item"><a  href="/braattveta">Bra att veta</a></li>
-        <li class="nav-item"><a  href="/fi/">Suomeksi</a></li>
+        <!--<li class="nav-item"><a  href="/fi/">Suomeksi</a></li>-->
     </ul>
 </nav>
