--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,6 +45,11 @@ html {
     -ms-content-zooming: none;
     -ms-overflow-style: scrollbar;
     transform: translate3d(0, 0, 0);
+    @media only screen
+    and (min-device-width : 768px)
+    and (max-device-width : 1024px) {
+      background-attachment: initial;
+    }
     @media only screen and (max-width: $mobile) and (orientation: portrait) {
       background: url('../img/bgs/vertical_woman.jpg') no-repeat center top fixed;
       -webkit-background-size: cover;
