revert to before all background changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=”sv-FI”>
+<html lang=sv-FI>
   {% include head.html %}
   <body id="{{ page.id }}">
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
